# model

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirement.txt  requirements.txt  run.sh
src/threekcal_model/: Dockerfile  api.py  db.py  main.py  model.py  threekcal_AI_contorl_app.py  utils.py  worker.py
src/threekcal_model/pages/: 1_텍스트_업로드.py  2_코멘트_라벨적기.py  3_결과_통계.py
src/threekcal_model/streamlit/: main.py
src/threekcal_model/streamlit/_pages/: comments.py
src/threekcal_model/streamlit/pages/: 1_텍스트_업로드.py  2_코멘트_라벨적기.py  3_trial.py  3_결과_통계.py
tests/: test_model.py
