[project]
name = "threekcal_model"
version = "0.2.0"
description = "main model for ML service"
authors = [
    {name = "ThreeKcal", email = "raecrowned@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "fastapi[standard]>=0.115.0",
    "PyMySQL>=1.1.1",
    "jigeum==1.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
