[project]
name = "threekcal_model"
version = "0.2.0"
description = "main model for ML service"
authors = [
    {name = "ThreeKcal", email = "raecrowned@gmail.com"},
]
dependencies = [
    "transformers>=4.45.1",
    "torch>=2.4.1",
    "pytz>=2024.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=8.3.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
